discussion/kv_engine/163175/163175_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47566: Ensure compaction doesn't cause a underflow exception

Currently an implicit compaction of a MamaKVStore can run concurrently
while VBucket's are being re-set during in memory. This can be
triggered due to a replica VBucket being rolled back to seqno:0. This
can cause an underflow of the item stats during the compaction
completion callback, the callback gets hold of the VBucket pointer to
the current VBucket in memory. The problem is that this points to the
new VBucket at seqno:0. So when we subtract the dropped items it
causes a subtraction against 0.

To fix this the CompactionContext should store a shared pointer to the
VBucket it's compacting for instead of just the VBid. So that we
correctly modify the in memory values of the VBucket revision we're
compacting for.

Change-Id: I1a2db87d5ae9c5346dc0b850e08fe6e423a3481e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-10-21 10:03:34.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-21 10:15:51.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35079/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35079/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41288/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_bucket.cc(1233): error C3493: "vb" cannot be implicitly captured because no default capture mode has been specified ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41288/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13590/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17: error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        dropKey(vb, diskKey, bySeqno, isAbort, highCompletedSeqno);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:1214:10: note: "vb" declared here
    auto vb = getVBucket(vbid);
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:1229:25: note: lambda expression begins here
    ctx->droppedKeyCb = [this, vbPtr = ctx->vb](const DiskDocKey& diskKey,
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13590/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13590/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3225/ : FAILURE

Compile error at [2021-10-21T10:04:43.132Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14361/ : FAILURE

Compile error at [2021-10-21T10:06:20.676Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14361/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15202/ : FAILURE

Compile error at [2021-10-21T10:05:59.350Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: ?vb? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15202/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15481/ : FAILURE

Compile error at [2021-10-21T10:05:53.796Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: ?vb? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16145/ : FAILURE

Compile error at [2021-10-21T10:05:08.560Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16145/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23528/ : FAILURE

Compile error at [2021-10-21T10:05:11.809Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: variable "vb" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23528/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3295/ : FAILURE

Compile error at [2021-10-21T10:06:11.074Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/ep_bucket.cc:1233:17:
error: ?vb? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12389/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
